ADD TESTS TO findIntersections